- Made sure Set to Default fires dirty status for Resource panel - Fixed possible width stretching bug in TV panel in Resource edit view

--- a/manager/templates/default/css/index.css
+++ b/manager/templates/default/css/index.css
@@ -375,7 +375,6 @@ table.classy tr.odd td {
 
 #modx-tv-tabs .modx-tv-table {
     border: 0px;
-    width: 100%;
 }
 #modx-tv-tabs .modx-tv-th { font-weight: bold; }
 #modx-tv-tabs .modx-tv-th, #modx-tv-tabs .modx-tv-td {
